--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://https://github.com/dododoodo/react_tutorial.git",
   "name": "tutorial",
   "version": "0.1.0",
   "private": true,
@@ -9,7 +10,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.85.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
